--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
                 </div>
 
                 <div class="service-card">
-                    <h2>モバイルアプリ</h2>
-                    <p>モバイルアプリケーションサービスの法的文書</p>
+                    <h2>Muse アプリ</h2>
+                    <p>Muse アプリケーションサービスの法的文書</p>
                     <div class="links">
-                        <a href="services/mobile-app/privacy-policy.html" class="btn btn-primary">プライバシーポリシー</a>
-                        <a href="services/mobile-app/terms-of-service.html" class="btn btn-secondary">利用規約</a>
+                        <a href="services/muse-app/privacy-policy.html" class="btn btn-primary">プライバシーポリシー</a>
+                        <a href="services/muse-app/terms-of-service.html" class="btn btn-secondary">利用規約</a>
                     </div>
                 </div>
 
