feat: メールアドレス等を定数化し、museのlegalについては英語にも対応した

--- a/services/muse-app/ja/terms-of-service.html
+++ b/services/muse-app/ja/terms-of-service.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>利用規約 - Muse アプリ</title>
-    <link rel="stylesheet" href="../../assets/style.css">
+    <link rel="stylesheet" href="../../../assets/style.css">
+    <script src="../../../assets/config.js"></script>
     <style>
         .legal-document {
             max-width: 800px;
@@ -60,7 +61,7 @@
 <body>
     <div class="container">
         <div class="legal-document">
-            <a href="../../index.html" class="back-link">← 法的文書一覧に戻る</a>
+            <a href="../../../index.html" class="back-link">← 法的文書一覧に戻る</a>
             
             <h1>利用規約（Muse アプリ）</h1>
             <p class="last-updated">最終更新日: 2025年7月2日</p>
