modify: 利用規約の修正

--- a/index.html
+++ b/index.html
@@ -26,10 +26,9 @@
 
                 <div class="service-card">
                     <h2>Muse アプリ</h2>
-                    <p>Muse アプリケーションサービスの法的文書</p>
+                    <p>Muse アプリケーションサービスの法的文書（多言語対応）</p>
                     <div class="links">
-                        <a href="services/muse-app/privacy-policy.html" class="btn btn-primary">プライバシーポリシー</a>
-                        <a href="services/muse-app/terms-of-service.html" class="btn btn-secondary">利用規約</a>
+                        <a href="services/muse-app/" class="btn btn-primary">法的文書を見る</a>
                     </div>
                 </div>
 
