--- a/services/api-service/privacy-policy.html
+++ b/services/api-service/privacy-policy.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html>
+<!DOC    <title>プライバシーポリシー - APIサービス</title>
+    <link rel="stylesheet" href="../../assets/style.css">
+    <script src="../../assets/config.js"></script>PE html>
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
@@ -180,9 +182,9 @@
             <h2>12. お問い合わせ</h2>
             <p>API サービスのプライバシーに関するお問い合わせは、以下までご連絡ください：</p>
             <p>
-                メール: api-privacy@example.com<br>
+                メール: <a href="#" data-email="apiPrivacy"></a><br>
                 開発者ポータル: https://developer.example.com/support<br>
-                電話: 03-0000-0000（平日 9:00-18:00）
+                電話: <span data-company="phone"></span>（<span data-company="businessHours"></span>）
             </p>
             
             <h2>13. プライバシーポリシーの変更</h2>
