--- a/services/api-service/terms-of-service.html
+++ b/services/api-service/terms-of-service.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html>
+<!DOC    <title>利用規約 - APIサービス</title>
+    <link rel="stylesheet" href="../../assets/style.css">
+    <script src="../../assets/config.js"></script>PE html>
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
@@ -208,9 +210,9 @@
             <h2>お問い合わせ</h2>
             <p>本規約に関するお問い合わせは、以下までご連絡ください：</p>
             <p>
-                開発者サポート: api-support@example.com<br>
+                開発者サポート: <a href="#" data-email="apiSupport"></a><br>
                 開発者ポータル: https://developer.example.com<br>
-                電話: 03-0000-0000（平日 9:00-18:00）
+                電話: <span data-company="phone"></span>（<span data-company="businessHours"></span>）
             </p>
         </div>
     </div>
