--- a/services/web-app/privacy-policy.html
+++ b/services/web-app/privacy-policy.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>プライバシーポリシー - Webアプリケーション</title>
     <link rel="stylesheet" href="../../assets/style.css">
+    <script src="../../assets/config.js"></script>
     <style>
         .legal-document {
             max-width: 800px;
@@ -119,8 +120,8 @@
             <h2>8. お問い合わせ</h2>
             <p>個人情報の取り扱いに関するお問い合わせは、以下までご連絡ください：</p>
             <p>
-                メール: privacy@example.com<br>
-                電話: 03-0000-0000
+                メール: <a href="#" data-email="webPrivacy"></a><br>
+                電話: <span data-company="phone"></span>
             </p>
             
             <h2>9. プライバシーポリシーの変更</h2>
