--- a/services/web-app/terms-of-service.html
+++ b/services/web-app/terms-of-service.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>利用規約 - Webアプリケーション</title>
     <link rel="stylesheet" href="../../assets/style.css">
+    <script src="../../assets/config.js"></script>
     <style>
         .legal-document {
             max-width: 800px;
