modify: 不要なステップになっていたので削除

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <h2>Muse アプリ</h2>
                     <p>Muse アプリケーションサービスの法的文書（多言語対応）</p>
                     <div class="links">
-                        <a href="services/muse-app/" class="btn btn-primary">法的文書を見る</a>
+                        <a href="services/muse-app/ja" class="btn btn-primary">法的文書を見る</a>
                     </div>
                 </div>
 
